--- a/D3D12_Framework - shortcut/D3D12_Framework.vcxproj.filters
+++ b/D3D12_Framework - shortcut/D3D12_Framework.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Common\GameTimer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="UploadBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Common\d3dApp.cpp">
