--- a/D3D12_Framework - shortcut/D3D12_Framework.vcxproj
+++ b/D3D12_Framework - shortcut/D3D12_Framework.vcxproj
@@ -139,6 +139,12 @@
     <ClCompile Include="Common\GameTimer.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Shaders\color.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <FileType>Document</FileType>
+    </Text>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
