--- a/D3D12_Framework - shortcut/D3D12_Framework.vcxproj.filters
+++ b/D3D12_Framework - shortcut/D3D12_Framework.vcxproj.filters
@@ -48,4 +48,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Shaders\color.hlsl">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
