Added a scene manager and fixed bugs

--- a/DX11 Framework rebuild/DX11 Framework rebuild/DX11 Framework rebuild.vcxproj.filters
+++ b/DX11 Framework rebuild/DX11 Framework rebuild/DX11 Framework rebuild.vcxproj.filters
@@ -64,6 +64,11 @@
     <FxCompile Include="Shader\model.hlsl">
       <Filter>Shader Files</Filter>
     </FxCompile>
-    <FxCompile Include="Shader\RainSimulationCS.hlsl" />
+    <FxCompile Include="Shader\RainSimulationCS.hlsl">
+      <Filter>Shader Files</Filter>
+    </FxCompile>
+    <FxCompile Include="Shader\reflect_shader.hlsl">
+      <Filter>Shader Files</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
