--- a/DX11 Framework rebuild/DX11 Framework rebuild/DX11 Framework rebuild.vcxproj.filters
+++ b/DX11 Framework rebuild/DX11 Framework rebuild/DX11 Framework rebuild.vcxproj.filters
@@ -70,6 +70,8 @@
     <FxCompile Include="Shader\reflect_shader.hlsl">
       <Filter>Shader Files</Filter>
     </FxCompile>
-    <FxCompile Include="Shader\opaque.hlsl" />
+    <FxCompile Include="Shader\opaque.hlsl">
+      <Filter>Shader Files</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
