adding particle system parts

--- a/DX11 Framework rebuild/DX11 Framework rebuild/DX11 Framework rebuild.vcxproj
+++ b/DX11 Framework rebuild/DX11 Framework rebuild/DX11 Framework rebuild.vcxproj
@@ -144,12 +144,14 @@
     <ClCompile Include="src\Model.cpp" />
     <ClCompile Include="src\ObjFileModel.cpp" />
     <ClCompile Include="src\pcH.cpp" />
+    <ClCompile Include="src\RainCompute.cpp" />
     <ClCompile Include="src\SceneManager.cpp" />
     <ClCompile Include="src\WICTextureLoader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\GameTimer.h" />
+    <ClInclude Include="src\RainCompute.h" />
     <ClInclude Include="src\SceneManager.h" />
     <ClInclude Include="src\Model.h" />
     <ClInclude Include="src\ObjFileModel.h" />
@@ -164,6 +166,12 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </FxCompile>
     <FxCompile Include="Shader\opaque.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </FxCompile>
+    <FxCompile Include="Shader\RainShader.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
